--- a/public/index.html
+++ b/public/index.html
@@ -2,62 +2,37 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Chat Websocket</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat Modular TS</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 h-screen flex flex-col items-center justify-center p-4">
-    <div class="w-full max-w-md bg-white rounded shadow-lg flex flex-col h-[80vh]">
-        <div class="bg-blue-600 text-white p-4 font-bold flex justify-between">
-            <span>Chat Grupal</span>
-            <span id="status" class="text-xs bg-blue-800 px-2 py-1 rounded">Conectando...</span>
-        </div>
+<body class="bg-slate-100 h-screen flex items-center justify-center p-4">
+    <div class="w-full max-w-2xl bg-white rounded-lg shadow-xl overflow-hidden flex flex-col h-[80vh]">
         
-        <div id="chat-box" class="flex-1 p-4 overflow-y-auto space-y-2"></div>
+        <!-- Header -->
+        <div class="bg-blue-600 p-4 text-white flex justify-between items-center">
+            <h1 class="font-bold text-lg" id="chat-title">💬 Chat Modular</h1>
+            <span id="status" class="text-xs bg-blue-700 px-2 py-1 rounded">Conectando...</span>
+        </div>
 
-        <form id="form" class="p-4 border-t flex gap-2">
-            <input type="text" id="input" class="flex-1 border rounded p-2" placeholder="Mensaje..." required>
-            <button class="bg-blue-600 text-white px-4 py-2 rounded">Enviar</button>
+        <!-- Área de Mensajes -->
+        <div id="chat-box" class="flex-1 p-4 overflow-y-auto space-y-3 bg-gray-50">
+            <!-- Los mensajes se inyectan aquí dinámicamente -->
+        </div>
+
+        <!-- Formulario -->
+        <form id="form" class="p-4 border-t bg-white flex gap-2">
+            <input type="text" id="input" 
+                class="flex-1 border border-gray-300 rounded px-4 py-2 focus:outline-none focus:border-blue-500" 
+                placeholder="Escribe un mensaje..." autocomplete="off" required>
+            <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">
+                Enviar
+            </button>
         </form>
     </div>
 
-    <script>
-        const ws = new WebSocket(location.origin.replace(/^http/, 'ws'));
-        const box = document.getElementById('chat-box');
-        const status = document.getElementById('status');
-
-        ws.onopen = () => status.textContent = 'Conectado';
-        ws.onclose = () => status.textContent = 'Desconectado';
-
-        ws.onmessage = (e) => {
-            const data = JSON.parse(e.data);
-            if(data.type === 'history') {
-                data.messages.forEach(renderMsg);
-            } else {
-                renderMsg(data);
-            }
-        };
-
-        document.getElementById('form').onsubmit = (e) => {
-            e.preventDefault();
-            const input = document.getElementById('input');
-            if(input.value) {
-                ws.send(JSON.stringify({ type: 'chat', text: input.value }));
-                input.value = '';
-            }
-        };
-
-        function renderMsg(msg) {
-            const div = document.createElement('div');
-            if (msg.type === 'status') {
-                div.className = 'text-center text-xs text-gray-500';
-                div.textContent = `${msg.user} ${msg.text}`;
-            } else {
-                div.className = 'bg-gray-200 p-2 rounded mb-1';
-                div.innerHTML = `<b>${msg.user}:</b> ${msg.text}`;
-            }
-            box.appendChild(div);
-            box.scrollTop = box.scrollHeight;
-        }
-    </script>
+    <!-- Importamos el script principal como MÓDULO -->
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
